tests/snapshots/tui__initial_display.snap
---
source: tests/tui.rs
expression: output
---
Buffer {
    area: Rect { x: 0, y: 0, width: 86, height: 20 },
    content: [
        "╔ Files ════════════════════╗┌ expenses.csv ────────────┐┌ 2025 ─────────────────────┐",
        "║▌expenses.csv      -251.50 ║│ 2024             -175.75 ││▎January 5          -75.75 │",
        "║ income.csv                ║│▎2025              -75.75 ││                           │",
        "║ savings.csv               ║│                          ││                           │",
        "║ hustle.csv                ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "║                           ║│                          ││                           │",
        "╚═══════════════════════════╝└──────────────────────────┘└───────────────────────────┘",
        "┌────────────────────────────────────────────────────────────────────────────────────┐",
        "│↓(j)/↑(k): Navigate | Tab: Focus | n/e: New/Edit Entry | v: View | q: Quit          │",
        "└────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 1, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 85, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
