tests/snapshots/tui__year_navigation_2024.snap
---
source: tests/tui.rs
expression: year_2024_output
---
Buffer {
    area: Rect { x: 0, y: 0, width: 86, height: 20 },
    content: [
        "┌ Files ────────────────────┐╔ expenses.csv ═════════════╗┌ 2024 ────────────────────┐",
        "│▎expenses.csv      -251.50 │║▌2024              -175.75 ║│▎2024-01-15        -50.25 │",
        "│ income.csv                │║ 2025               -75.75 ║│ 2024-02-20       -100.00 │",
        "│ savings.csv               │║                           ║│ 2024-03-10        -25.50 │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "│                           │║                           ║│                          │",
        "└───────────────────────────┘╚═══════════════════════════╝└──────────────────────────┘",
        "┌────────────────────────────────────────────────────────────────────────────────────┐",
        "│↓(j)/↑(k): Navigate | Tab: Focus | a: Add Entry | e: Edit Entry | q: Quit           │",
        "└────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 1, fg: Green, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Reset, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 57, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 85, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
